--- a/FCC - TRIBUTE PAGE/src/index.html
+++ b/FCC - TRIBUTE PAGE/src/index.html
@@ -40,7 +40,7 @@
 </div>
 </div>
 
-  <div id="tribute-info"><p>Chris Sean is one of the most inspiriting web deveolopers out there, and hundreds of fans thankful for the opportunity to learn from him.
+  <div id="tribute-info"><p>Chris Sean is one of the most inspiriting web deveolopers out there, and hundreds of fans are thankful for the opportunity to learn from him.
 <br>
     <hr>
 <br>  
